--- a/ncert-maths/sequences.tex
+++ b/ncert-maths/sequences.tex
@@ -129,4 +129,8 @@ Which term of the following sequences:\\
 \solution
 \pagebreak
 
+\item Shamshad Li buys a scooter for RS 22000. He pays RS 4000 cash and agrees to pay the balance in annual instalment of RS 1000 plus 10\% interest on the unpaid amount. How much will the scooter cost him?
+\solution
+\pagebreak
+
 \end{enumerate}
